--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,17 @@
-server.port=8000
+server.port=8888
 spring.datasource.url=jdbc:postgresql://localhost:5432/App_avto_service
-spring.datasource.driver-class-name=org.postgresql.Driver
+
+spring.datasource.driver-class.Name=org.postgresql.Driver
 spring.datasource.username=postgres
 spring.datasource.password=786
+
 spring.jpa.hibernate.ddl-auto=create
 spring.sql.init.enabled=true
 spring.jpa.show-sql=false
 spring.jpa.open-in-view=true
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
+
+
+app.jwtSecretKey=MetalSupperKeyForTokenThisVeryUseful
+app.jwtExpireInMilSec=604800000
