--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
     <name>Avto_Service</name>
     <description>Demo project for Spring Boot</description>
     <properties>
+        <start-class>com.bt.collab.alu.api.webapp.Application</start-class>
         <java.version>11</java.version>
     </properties>
     <dependencies>
@@ -75,6 +76,11 @@
             <artifactId>xercesImpl</artifactId>
             <version>2.9.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-rest-webmvc</artifactId>
+            <version>3.5.1</version>
+        </dependency>
     </dependencies>
 
     <build>
@@ -93,5 +99,4 @@
             </plugin>
         </plugins>
     </build>
-
 </project>
