Orderni saqlashni tugatdim

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.datasource.driver-class.Name=org.postgresql.Driver
 spring.datasource.username=postgres
 spring.datasource.password=786
 
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.sql.init.enabled=true
 spring.jpa.show-sql=false
 spring.jpa.open-in-view=true
